# ai-iq-passport

./: .gitignore  CHANGELOG.md  README.md  mcp_config.json  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  basic_usage.py  demo_tamper_resistance.py  full_workflow.py  mcp_test.py  peer_exchange_api.py  peer_exchange_demo.sh  quick_start.py  tamper_resistance_demo.py  test_v030_features.py
passport/: __init__.py  card.py  cli.py  mcp_server.py  predictions.py  reputation.py  server.py  signer.py  skills.py  task_log.py  verifier.py
passport/adapters/: __init__.py  a2a.py  json.py  mcp.py
tests/: test_adapters.py  test_ai_iq_integration.py  test_card.py  test_mcp_server.py  test_peer_exchange.py  test_predictions.py  test_reputation.py  test_signer.py  test_skills.py  test_tamper_resistance.py  test_task_log.py
